// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders all sizes correctly 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[--radius-md] font-medium transition-colors focus-visible:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[--color-primary] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[--color-primary] text-white hover:bg-[--color-primary-hover] h-9 px-3 text-xs"
  >
    sm
  </button>
</DocumentFragment>
`;

exports[`Button > renders all sizes correctly 2`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[--radius-md] text-sm font-medium transition-colors focus-visible:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[--color-primary] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[--color-primary] text-white hover:bg-[--color-primary-hover] h-10 px-4 py-2"
  >
    md
  </button>
</DocumentFragment>
`;

exports[`Button > renders all sizes correctly 3`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[--radius-md] text-sm font-medium transition-colors focus-visible:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[--color-primary] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[--color-primary] text-white hover:bg-[--color-primary-hover] h-11 px-8"
  >
    lg
  </button>
</DocumentFragment>
`;

exports[`Button > renders all variants correctly 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[--radius-md] text-sm font-medium transition-colors focus-visible:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[--color-primary] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[--color-primary] text-white hover:bg-[--color-primary-hover] h-10 px-4 py-2"
  >
    primary
  </button>
</DocumentFragment>
`;

exports[`Button > renders all variants correctly 2`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[--radius-md] text-sm font-medium transition-colors focus-visible:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[--color-primary] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-[--color-border] bg-[--color-surface] hover:bg-[--color-surface-offset] h-10 px-4 py-2"
  >
    secondary
  </button>
</DocumentFragment>
`;

exports[`Button > renders all variants correctly 3`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[--radius-md] text-sm font-medium transition-colors focus-visible:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[--color-primary] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[--color-surface-offset] h-10 px-4 py-2"
  >
    ghost
  </button>
</DocumentFragment>
`;

exports[`Button > renders all variants correctly 4`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[--radius-md] text-sm font-medium transition-colors focus-visible:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[--color-primary] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[--color-error] text-white hover:bg-[--color-error-hover] h-10 px-4 py-2"
  >
    destructive
  </button>
</DocumentFragment>
`;

exports[`Button > renders correctly with default props 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[--radius-md] text-sm font-medium transition-colors focus-visible:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[--color-primary] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[--color-primary] text-white hover:bg-[--color-primary-hover] h-10 px-4 py-2"
  >
    Click me
  </button>
</DocumentFragment>
`;
